--- a/config.toml
+++ b/config.toml
@@ -29,5 +29,5 @@ name = "author"
   enableHanEmph = true
   enableMathjax = true
   favicon = "/favicon.ico"
-  footnote = "Follow me on <a class=link href=https://github.com/queensferryme>GitHub</a>, <a class=link href=https://twitter.com/queensferryme>Twitter</a> or <a class=link href=/index.xml>RSS</a> | <a class=link href=https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh target=_blank rel=noopener>CC BY-NC-SA 4.0</a>"
+  footnote = ""
   keywords = ["hugo", "latex", "theme"]
