--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://themesfromart.com/themes/"
 defaultContentLanguage = "en"
 hasCJKLanguage = true
 languageCode = "en"
