switched to false the chinese korean japanes

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://themesfromart.com/"
 defaultContentLanguage = "en"
-hasCJKLanguage = true
+hasCJKLanguage = false
 languageCode = "en"
 paginate = 5
 theme = "hugo-theme-texify"
