--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ languageCode = "en"
 paginate = 5
 theme = "hugo-theme-texify"
 title = "Themes from Art"
+ignoreFiles=["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$", ".DS_Store", "Thumbs.db"]
 
 disqusShortname = "themes-from-art"
 googleAnalytics = "G-WPRZXLGMHX"
